nedd bugFix 'count length'

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="wrapper">
-    <div id="myInput">
+    <div class="myInput">
         <input type="text" id="input" placeholder="Please enter your text">
     </div>
     <button id="capitalSize"> Отобразить заглавными буквами</button>
@@ -16,6 +16,6 @@
     </div>
 </div>
 
-<script src="task1(input%20-%20drawer).js"></script>
+<script src="task1(input-drawer).js"></script>
 </body>
 </html>
