rename tasks and make task2

--- a/task1.html
+++ b/task1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tasks from Doctype Html</title>
-    <link rel="stylesheet" href="assets/task.css">
+    <link rel="stylesheet" href="assets/css/task1.css">
 </head>
 <body>
 <div class="wrapper">
@@ -16,6 +16,6 @@
     </div>
 </div>
 
-<script src="task1(input-drawer).js"></script>
+<script src="assets/script/task1.js"></script>
 </body>
 </html>
