--- a/task3.html
+++ b/task3.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="assets/css/task3.css">
 </head>
 <body>
-
+<button>Generete</button>
+<p>Your new password :</p>
+<output></output>
 <script src="script/task3.js" ></script>
 </body>
 </html>
