--- a/passwordGenerator.html
+++ b/passwordGenerator.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Password</title>
-    <link rel="stylesheet" href="assets/css/task3.css">
+    <link rel="stylesheet" href="assets/css/passwordGenerator.css">
 </head>
 <body>
 <button>Generete</button>
 <p>Your new password :</p>
 <output></output>
-<script src="script/task3.js" ></script>
+<script src="script/passwordGenerator.js" ></script>
 </body>
 </html>
