--- a/passwordGenerator.html
+++ b/passwordGenerator.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="assets/css/passwordGenerator.css">
 </head>
 <body>
-<button>Generete</button>
+<button>Generate</button>
 <p>Your new password :</p>
 <output></output>
 <script src="script/passwordGenerator.js" ></script>
