--- a/Calendar.html
+++ b/Calendar.html
@@ -6,7 +6,40 @@
     <link rel="stylesheet" href="assets/css/calendar.css">
 </head>
 <body>
+<div class="wrapper">
+    <div class="header">
+        <h1>Calendar</h1>
+    </div>
+    <div class="year">
+        <p>Year:</p>
+    </div>
+    <div class="month">
+        <p>Month:</p>
+    </div>
+    <div id="time"></div>
+    <table>
+        <caption>Today</caption>
+        <tr>
+            <th>ПН</th>
+            <th>ВТ</th>
+            <th>СР</th>
+            <th>ЧТ</th>
+            <th>ПТ</th>
+            <th>СБ</th>
+            <th>ВС</th>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
 
+</div>
 
 
 <script src="script/calendar.js" ></script>
