create files for popup, sort code between js files learnOOP and func-constr-create-elements

--- a/learnOOP.html
+++ b/learnOOP.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>learnOOP</title>
+    <link rel="stylesheet" href="assets/css/popup.css">
 </head>
 <body>
-<div id="wrapper"></div>
 
+<div id="wrapper"></div>
 
 <script src="script/learnOOP.js"></script>
 </body>
