--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,8 @@
 <div id="wrapper">
     <h2>Header</h2>
     <div>
-        Content inside Div
+        <p>As its name states, EETS was begun as a 'club',
+            and it retains certain features of that even now.</P>
         <div class="popup">This is a tip</div>
     </div>
     <button id="clickMe">ClickMe</button>
