--- a/learnOOP.html
+++ b/learnOOP.html
@@ -10,5 +10,6 @@
 <div id="wrapper"></div>
 
 <script src="script/learnOOP.js"></script>
+<script src="script/func-constr-create-element.js"></script>
 </body>
 </html>
