--- a/popup.html
+++ b/popup.html
@@ -8,10 +8,8 @@
 <body>
 <div id="wrapper">
     <h2>Header</h2>
-    <div>
-        <p>As its name states, EETS was begun as a 'club',
-            and it retains certain features of that even now.</P>
-        <div class="popup">This is a tip</div>
+    <div id="text">
+        Main DIV with some text
     </div>
     <button id="clickMe">ClickMe</button>
     <script src="script/popup.js"></script>
